# Advanced-Deep-Learning-2026

./: pyproject.toml
Week1/: Неделя 2_Deep Learning Advanced_ДЗ.ipynb
Week1/utils/: multibox_loss.py  ssd_resnet101.py  ssd_resnet18.py  ssd_vgg16.py  voc_dataset.py
src/object_detection_src/: Homework_week2.ipynb
src/object_detection_src/utils/: compute_map.py  ssd_convnext_t.py  ssd_resnet18.py  ssd_vgg16.py  voc_dataloader.py  voc_dataset.py
src/text_recognition_src/: Homework_week3.ipynb  Homework_week4.ipynb
