[project]
name = "adv-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "datasphere>=0.10.0",
    "ipykernel>=7.2.0",
    "pycocotools>=2.0.11",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchview>=0.2.7",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "Week1",
]

# PyPI ships CPU-only torch; CUDA wheels live on PyTorch's index (matches driver CUDA 12.6).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
