[project]
name = "advanced-deep-learning-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=7.2.0",
    "pycocotools>=2.0.11",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchview>=0.2.7",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
